# cerydra

./: .gitignore  config.yml  docker-compose.yml
cerydra/: Dockerfile  pyproject.toml
cerydra/app/: __main__.py  download_plugins.py  load_plugins.py  plugin_orchestrator.py
cerydra/core/: logging.py
