[project]
name = "cerydra"
version = "0.1.0"
description = "Supreme Commander - Orchestrator service"
authors = [
    {name = "SnowHawkeye"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "imperium @ git+https://github.com/AstralExpress/imperium",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
